taller1_grupo14/log/build_2023-02-09_12-20-48/turtle_bot_14/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/sergio/Robotica/shalpy/taller1_grupo14/install/turtle_bot_14/lib/python3.10/site-packages/turtle_bot_14/turtle_bot_teleop.py", line 158
    if (key == key1)
                    ^
SyntaxError: expected ':'

